Add registration and login and admin panel of project

--- a/.env.develop
+++ b/.env.develop
@@ -1,6 +1,6 @@
 APP_NAME="My Call Center"
 APP_ENV=develop
-APP_KEY=
+APP_KEY=base64:OdtLkVHC7Pg9oovwqeWucNcvcS1hvQohoadNzNxth4s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
